Simplify enchanted book printing recipes in JEI